[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Playership.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/level.gd" type="Script" id=2]
[ext_resource path="res://assets/Blue Sky 8x8 Monospaced.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/background_space.png" type="Texture" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="Playership" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 288 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Spawner" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( 9.98648, 0 )
offset = 10.0

[node name="end_timer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="score" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -154.0
margin_top = 48.0
margin_right = 154.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 3 )
text = "200 points to win"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="end_timer" to="." method="_on_end_timer_timeout"]
